[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Sniper.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Armas/Rango_circulo.png" type="Texture2D" id=2]
[ext_resource path="res://Sounds/Sniper/SniperShootFX.mp3" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Sniper/SniperReloadFX.mp3" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 63.1269

[node name="Sniper" type="Node2D"]
script = ExtResource( 1 )

[node name="Pivot" type="Node2D" parent="."]
position = Vector2( 1.77636e-15, -1.21714 )
scale = Vector2( 1.49933, 1.77866 )

[node name="Rango" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rango"]
shape = SubResource( 1 )

[node name="Sprite2D" type="Sprite2D" parent="Rango"]
scale = Vector2( 0.123047, 0.12207 )
texture = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array( -0.603754, -0.304284 )
width = 1.0

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 2.38419e-07 )
enabled = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="Apuntar" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ShootFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
pitch_scale = 5.0
bus = "FX"

[node name="ReloadFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
bus = "FX"

[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
